# panel

./: pyproject.toml
dashboard/: package.json
dashboard/public/statics/locales/: en.json  fa.json  ru.json  zh.json
dashboard/src/components/dashboard/: dashboard-statistics.tsx  workers-health-card.tsx
dashboard/src/service/api/: index.ts
